--- a/00_DK_Plots.Rmd
+++ b/00_DK_Plots.Rmd
@@ -11,7 +11,8 @@ library(tidyverse)
 data("iris")
 ggplot(iris, aes(x = Sepal.Length, y = Petal.Length, color = Species)) + 
   geom_point(size = 2) + 
-  theme_classic() 
+  theme_classic() + 
+  geom_title("Plot Title")
 
 ```
 
