--- a/00_DK_Plots.Rmd
+++ b/00_DK_Plots.Rmd
@@ -12,7 +12,7 @@ data("iris")
 ggplot(iris, aes(x = Sepal.Length, y = Petal.Length, color = Species)) + 
   geom_point(size = 2) + 
   theme_classic() + 
-  geom_title("Plot Title")
+  labs(title = "Plot Title")
 
 ```
 
