--- a/00_DK_Plots.Rmd
+++ b/00_DK_Plots.Rmd
@@ -12,6 +12,6 @@ data("iris")
 ggplot(iris, aes(x = Sepal.Length, y = Petal.Length, color = Species)) + 
   geom_point(size = 2) + 
   theme_classic() 
-
+#This is corinne's addition to the code
 ```
 
